Closed Bug 311391 Opened 20 years ago Closed 19 years ago

Realplayer launches in background when opening a downloaded .ram file

Categories

(Camino Graveyard :: Downloading, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.6

People

(Reporter: peter4654, Assigned: bugzilla-graveyard)

References

()

Details

(Keywords: fixed1.8.1.5)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051006 Camino/1.0a1+ Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051006 Camino/1.0a1+ Clicking on any realplayer video content from this URL http://www.bbc.co.uk/cult/classic/adamant/ causes the content to play under the webpage Reproducible: Always Steps to Reproduce: 1. Go to URL 2. Click on any video content 3. Realplayer launches Actual Results: Realplayer launches and plays the selected video content UNDER the selected webpage Expected Results: Realplayer launches and plays the selected video content ON TOP OF the selected webpage
I can confirm that Real doesn't take focus when a .ram file is opened. I'm not sure if this is our issue. Mike?
Mike?
I don't think we can do anything about this. We just tell the Finder to open the .ram file; we don't control whether RealOne Player comes to the front. Suggest INVALID.
Summary: Non embedded realplayer content displays under the page → Realplayer launches in background when opening a downloaded .ram file
(In reply to comment #3) > I don't think we can do anything about this. We just tell the Finder to open > the .ram file; we don't control whether RealOne Player comes to the front. > > Suggest INVALID. I'd agree, except doing the same in Fx, RealPlayer becomes the frontmost app. I've seen other instances of Camino trying too hard to retain focus (launch Camino, put in bg, switch to another app while Camino finishes launching and fetching home page), and this might be what's happening here. OTOH, one can, in most cases, position the Camino and RealPlayer windows so that one does not obscure the other.
Oops, forgot to cc Simon when I made my comment about the focus issue :-(
RealPlayer takes focus when downloading the files from Safari, too, albeit with a little more delay than Fx. Are there multiple ways to pass items off to the Finder/LaunchServices?
This happens with WMP as well in certain circumstances. If it's a streaming .wmv, WMP will jump to the front. If you actually have to download the .wmv file (and your download manager is not open, but you have it set to open upon download), the download manager will open, the file will download, and then the WMP window opens behind the download manager but in front of the navigation window, and the focus will be still be on Camino. If you download the .wmv and the download manager is already open in the background, WMP will open behind everything else.
*** Bug 327451 has been marked as a duplicate of this bug. ***
Stuart, do you know the answer to Smokey's question in comment 6? If we're doing something incorrectly, it'd be great to know what exactly that is.
Ok, I did a little further testing and then a little legwork on this, and got lucky. We seem to be doing this ("background launching") for all types of files/apps when we let downloaded files be opened... From ADC: http://developer.apple.com/documentation/Carbon/Conceptual/LaunchServicesConcepts/LSCConcepts/chapter_2_section_6.html#//apple_ref/doc/uid/TP30000999-CH202-BABBJHID "When opening an application (whether by itself or to open one or more documents or URLs), you can specify various launch options to control the manner in which it is launched or activated. These can include: [...] # Whether to permit the application to open in the background or to fail if it is a background-only application # Whether to open the application without bringing it to the foreground" I assume somewhere later in the same article or other LaunchServices documentation it tells us how to alter these options, but since it'll all be Greek to me, I'll leave that for whomever fixes the bug, if we decide we want to alter the current behavior. For now, confirming the bug since it seems from the LaunchServices documentation (as well as observation!) that there are indeed at least two options to pass when telling LS to open downloaded files. Also kicking from Plug-ins to Downloading since it's *not* plugins and I assume the downloading code is calling LS when the "open downloaded files" option is checked. (Oddly enough, the "open" button on the dl toolbar does the opposite and lets the other app become frontmost/focused....)
Status: UNCONFIRMED → NEW
Component: Plug-ins → Downloading
Ever confirmed: true
As far as the launch options go, there's a 10.3+ method on NSWorkspace that does all that (openURLs:withAppBundleIdentifier:options:additionalEventParamDescriptor:launchIdentifiers:).
Thanks for the lead, Wevah. That took about five minutes to track down once I knew what to look for.
Assignee: mikepinkerton → bugzilla
Status: NEW → ASSIGNED
Attachment #256142 - Flags: review?(stridey)
Comment on attachment 256142 [details] [diff] [review] redonkulously simple patch r=ardissone, but someone do check the code ;) The bbc testcase doesn't work anymore (it doesn't download a file somehow, and does other odd things), but the NPR newscast/program streams at http://www.npr.org/ do seem to produce a file, and the app became frontmost after download with this patch.
Attachment #256142 - Flags: review+
Comment on attachment 256142 [details] [diff] [review] redonkulously simple patch fine by me, if this is the action we want for all applications.
Attachment #256142 - Flags: review+
Comment on attachment 256142 [details] [diff] [review] redonkulously simple patch Code looks good, but I can't repro the original bug (even on NPR), clearing instead of +ing. 2 reviews should do it anyway.
Attachment #256142 - Flags: review?(stridey) → superreview?(stuart.morgan)
Comment on attachment 256142 [details] [diff] [review] redonkulously simple patch >+ [[NSWorkspace sharedWorkspace] openFile:mDestPath withApplication:nil andDeactivate:YES]; Just use: [[NSWorkspace sharedWorkspace] openFile:mDestPath] No need to use the three parameter version when you want the default behavior for the last two.
Attachment #256142 - Flags: superreview?(stuart.morgan) → superreview-
Presumably the reviewers won't feel the need to test this again :-p
Attachment #256168 - Flags: superreview?(stuart.morgan)
Comment on attachment 256168 [details] [diff] [review] redonkulously simpler sr=smorgan. Because I'm concerned that this behavior will be really annoying for longer downloads, this should land after 1.1 so we have lots of time to see if it causes problems.
Attachment #256168 - Flags: superreview?(stuart.morgan) → superreview+
Whiteboard: [needs checkin after 1.1]
Whiteboard: [needs checkin after 1.1] → [needs checkin after 1.5]
QA Contact: downloading
Checked in on trunk and MOZILLA_1_8_BRANCH.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1.5
Resolution: --- → FIXED
Whiteboard: [needs checkin after 1.5]
Target Milestone: --- → Camino1.6
how is this going to be annoying if it's a user pref? if having downloads, regardless of length, open and take over focus is annoying, just go to your preferences and uncheck "open downloaded files."
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: