Camino only - Bug 311391: Launch external apps from downloads in foreground. Patch by Chris Lawson <cl-bugs@chrislawson.net> r=kreeger,smokey sr=smorgan